<resources>
    <string name="app_name">Homecook\'s companion</string>
    <string name="package_name">com.papum.homecookscompanion</string>
    <string name="activity_main_label">Homecook\'s companion</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="file_provider_authority">com.papum.homecookscompanion.fileprovider</string>
    <string name="path_external_files">external_path</string>
    <string name="path_external_images">my_images</string>
    <string name="path_files">files</string>
    <string name="path_cache">cache</string>
    <string name="channel_stock_name">Homecook\'s Companion stock</string>
    <string name="channel_stock_description">Periodic notifications for low stocks.</string>
    <string name="channel_geofences_name">Homecook\'s Companion geofences</string>
    <string name="channel_geofences_description">Notifications on entering a shop.</string>
    <string name="bottom_nav_label_meals">Meals</string>
    <string name="bottom_nav_label_list">List</string>
    <string name="bottom_nav_label_inventory">Inventory</string>
    <string name="bottom_nav_label_stats">Stats</string>
    <string name="bottom_nav_label_products">Products</string>
    <string name="nav_label_about">About</string>
    <string name="nav_label_editFood">Edit food</string>
    <string name="nav_label_editRecipe">Edit recipe</string>
    <string name="nav_label_mapShopsProduct">Search in shops</string>
    <string name="nav_label_mapShops">Saved shops</string>
    <string name="nav_label_scan">Scan a receipt</string>
    <string name="nav_label_settings">Settings</string>
    <string name="nav_label_shops">Saved shops</string>
    <string name="dialog_addTo_format_date">%02d/%02d/%04d</string>
    <string name="dialog_addTo_format_time">%02d:%02d</string>
    <string name="dialog_addTo_placeholder_tv">Insert quantity of {} to add to {}:</string>
    <string name="dialog_addTo_placeholder_et">(quantity)</string>
    <string name="editFood_placeholder_name">(name)</string>
    <string name="editFood_placeholder_parent">(parent category)</string>
    <string name="nutrients_format_value">%5.3f</string>
    <string name="nutrients_placeholder_carbohydrates">(carbohydrates)</string>
    <string name="nutrients_placeholder_fats">(fats)</string>
    <string name="nutrients_placeholder_kcal">(kcal)</string>
    <string name="nutrients_placeholder_proteins">(proteins)</string>
    <string name="nutrients_placeholder_short_kcal">kcal:%5.1f</string>
    <string name="nutrients_placeholder_short_carb">carb:%5.1f</string>
    <string name="nutrients_placeholder_short_fats">fats:%5.1f</string>
    <string name="nutrients_placeholder_short_prot">prot:%5.1f</string>
    <string name="product_format_date">%02d/%02d/%04d</string>
    <string name="product_format_time">%02d:%02d</string>
    <string name="product_format_price">%4.2f</string>
    <string name="product_format_quantity">%5.2f</string>
    <string name="product_placeholder_alert">{}</string>
    <string name="product_placeholder_price_value">0000.00</string>
    <string name="product_placeholder_quantity">q.ty</string>
    <string name="product_placeholder_quantity_value">00000.00</string>
    <string name="product_search_placeholder">Search a product</string>
    <string name="product_placeholder_text">some product</string>
    <string name="product_placeholder_type">(Type)</string>
    <string name="receipt_placeholder_shop">Eurospin...</string>
    <string name="recognized_placeholder">(Recognized product)</string>
    <string name="recognized_placeholder_price">(Recognized price)</string>
    <string name="shop_format_latlng">Coordinates: [%f,%f]</string>
    <string name="shop_placeholder_address">(Address missing)</string>
    <string name="shop_placeholder_brand">(Brand missing)</string>
    <string name="shop_placeholder_city">(City missing)</string>
    <string name="shop_placeholder_state">(State missing)</string>
    <string name="credits_title">Credits:</string>
    <string name="dialog_addShop_address">Address:</string>
    <string name="dialog_addShop_brand">Brand:</string>
    <string name="dialog_addShop_city">City:</string>
    <string name="dialog_addShop_state">State:</string>
    <string name="dialog_addShop_map_tip">Long press on a point to add a shop there</string>
    <string name="editFood_btn_cancel">Cancel</string>
    <string name="editFood_btn_confirm">Create</string>
    <string name="editFood_btn_map">Search on map</string>
    <string name="editFood_text_edible">Is edible?</string>
    <string name="editRecipe_title">Create a recipe</string>
    <string name="editRecipe_ingredients">Ingredients:</string>
    <string name="inventory_add_recipe">Cooked a recipe?</string>
    <string name="map_product_info_product">Compare the prices for "%s":</string>
    <string name="map_product_radius">Selected radius: %1$5.2fkm</string>
    <string name="map_product_best_price">Cheapest price: %1$5.2f€</string>
    <string name="map_product_best_shop">Cheapest shop: "%s"</string>
    <string name="map_product_slider_min">1km</string>
    <string name="map_product_slider_max">all</string>
    <string name="meals_date_btn_left_description">button previous day</string>
    <string name="meals_date_btn_right_description">button next day</string>
    <string name="nutrients_title">Nutrients</string>
    <string name="nutrients_quantity">For</string>
    <string name="nutrients_kcal">Kcal: </string>
    <string name="nutrients_carbohydrates">Carbohydrates (g): </string>
    <string name="nutrients_fats">Fats (g): </string>
    <string name="nutrients_proteins">Proteins (g): </string>
    <string name="products_create">Create new:</string>
    <string name="products_add_to">Add to:</string>
    <string name="products_btn_addToList">+List</string>
    <string name="products_btn_addToInventory">+Inventory</string>
    <string name="products_btn_addToMeals">+Meals</string>
    <string name="products_btn_editFood">new Food</string>
    <string name="products_btn_editRecipe">new Recipe</string>
    <string name="receipt_header_recognized">Recognized product /</string>
    <string name="receipt_header_recognized_price">Recognized price</string>
    <string name="receipt_header_selected">Selected product /</string>
    <string name="receipt_header_selected_price">Selected price - quantity</string>
    <string name="receipt_shop">Select the shop</string>
    <string name="receipt_shop_info">It\'s required to recognize the receipt products properly.</string>
    <string name="receipt_info_title">FOR A GOOD PICTURE:</string>
    <string name="receipt_info">
        \n
        1. Make sure that only products and prices are visible in the picture of the receipt (tip: you can fold it first, or crop the image with an editor)\n
        \n
        2. Lines of text should be as horizontal as possible, so try to keep your phone parallel to the receipt (tip: with an editor, you can also try to adjust the image later)
    </string>
    <string name="recipe_weight">Total weight: </string>
    <string name="settings_header_notifications">Notifications</string>
    <string name="settings_geofence">get notified when you\'re in a shop</string>
    <string name="shops_add">Add a shop:</string>
    <string name="stats_title">Nutrients summary</string>
    <string name="stats_duration">Daily average for</string>
    <string name="intent_share_recipe">Share this recipe\'s file with…</string>
    <string name="btn_add">Add</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_create">Create</string>
    <string name="btn_enable">Enable</string>
    <string name="btn_import">Import</string>
    <string name="btn_next">Next</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_save">Save</string>
    <string name="btn_share">Share</string>
    <string name="btn_select_product">Select product</string>
    <string name="btn_select_image_receipt">Select a receipt image</string>
    <string name="btn_scan_receipt">Scan a receipt</string>
    <string name="description_btn_select_product">Select a product</string>
    <string name="description_btn_expand">Open actions</string>
    <string name="description_btn_remove">Remove item</string>
    <string name="product_measure_price">€</string>
    <string name="product_placeholder_measure_quantity">g</string>
    <string name="quantity_unavailable">(none)</string>
    <string name="quantity_unavailable_kcal">kcal: (none)</string>
    <string name="quantity_unavailable_carb">kcal: (none)</string>
    <string name="quantity_unavailable_fats">fats: (none)</string>
    <string name="quantity_unavailable_prot">prot: (none)</string>
    <string name="link_icon_flaticon_app">"https://www.flaticon.com/free-icons/cleaver - Cleaver icons created by Good Ware - Flaticon"</string>
    <string name="link_icon_flaticon_about">"https://www.flaticon.com/free-icons/info - Info icons created by Good Ware - Flaticon"</string>
    <string name="link_icon_flaticon_add">"https://www.flaticon.com/free-icons/plus - Plus icons created by Good Ware - Flaticon"</string>
    <string name="link_icon_flaticon_bell">"https://www.flaticon.com/free-icons/bell - Bell icons created by Good Ware - Flaticon"</string>
    <string name="link_icon_flaticon_camera">"https://www.flaticon.com/free-icons/camera - Camera bin icons created by cah nggunung - Flaticon"</string>
    <string name="link_icon_flaticon_confirm">"https://www.flaticon.com/free-icons/correct - Correct bin icons created by cah nggunung - Flaticon"</string>
    <string name="link_icon_flaticon_cross">"https://www.flaticon.com/free-icons/cross - Cross bin icons created by cah nggunung - Flaticon"</string>
    <string name="link_icon_flaticon_day_prev">"https://www.flaticon.com/free-icons/arrows - Arrows icons created by cah nggunung - Flaticon"</string>
    <string name="link_icon_flaticon_delete">"https://www.flaticon.com/free-icons/recycle-bin - Recycle bin icons created by cah nggunung - Flaticon"</string>
    <string name="link_icon_flaticon_download">"https://www.flaticon.com/free-icons/download - Download bin icons created by cah nggunung - Flaticon"</string>
    <string name="link_icon_flaticon_expand_down">"https://www.flaticon.com/free-icons/down - Down icons created by ghufronagustian - Flaticon"</string>
    <string name="link_icon_flaticon_expand_up">"https://www.flaticon.com/free-icons/up - Up icons created by ghufronagustian - Flaticon"</string>
    <string name="link_icon_flaticon_food">"https://www.flaticon.com/free-icons/healthy-food - Healthy food icons created by Good Ware - Flaticon"</string>
    <string name="link_icon_flaticon_inventory">"https://www.flaticon.com/free-icons/fridge - Fridge icons created by Good Ware - Flaticon"</string>
    <string name="link_icon_flaticon_list">"https://www.flaticon.com/free-icons/to-do-list - To do list icons created by Good Ware - Flaticon"</string>
    <string name="link_icon_flaticon_meal">"https://www.flaticon.com/free-icons/plate - Plate icons created by Good Ware - Flaticon"</string>
    <string name="link_icon_flaticon_non_edible">"https://www.flaticon.com/free-icons/parcel - Parcel icons created by Good Ware - Flaticon"</string>
    <string name="link_icon_flaticon_recipe">"https://www.flaticon.com/free-icons/salad - Salad icons created by Freepik - Flaticon"</string>
    <string name="link_icon_flaticon_settings">"https://www.flaticon.com/free-icons/settings - Settings icons created by Good Ware - Flaticon"</string>
    <string name="link_icon_flaticon_shop">"https://www.flaticon.com/free-icons/seller - Seller icons created by Good Ware - Flaticon"</string>
    <string name="link_icon_flaticon_stats">"https://www.flaticon.com/free-icons/pie-chart - Pie chart icons created by Good Ware - Flaticon"</string>
</resources>