<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/h2_margin"
            android:text="@string/credits_title"
            android:textSize="@dimen/h2_fontSize"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:layout_margin="@dimen/tv_margin"
            android:text="@string/link_icon_flaticon_about"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:layout_margin="@dimen/tv_margin"
            android:text="@string/link_icon_flaticon_bell"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:layout_margin="@dimen/tv_margin"
            android:text="@string/link_icon_flaticon_food"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:layout_margin="@dimen/tv_margin"
            android:text="@string/link_icon_flaticon_inventory"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:layout_margin="@dimen/tv_margin"
            android:text="@string/link_icon_flaticon_list"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:layout_margin="@dimen/tv_margin"
            android:text="@string/link_icon_flaticon_meal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:layout_margin="@dimen/tv_margin"
            android:text="@string/link_icon_flaticon_non_edible"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:layout_margin="@dimen/tv_margin"
            android:text="@string/link_icon_flaticon_recipe"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:layout_margin="@dimen/tv_margin"
            android:text="@string/link_icon_flaticon_settings"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:layout_margin="@dimen/tv_margin"
            android:text="@string/link_icon_flaticon_shop"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:layout_margin="@dimen/tv_margin"
            android:text="@string/link_icon_flaticon_stats"
            />

    </LinearLayout>

</ScrollView>