<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/meals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/bottom_nav_label_meals"
        android:icon="@drawable/restaurant_512"
        />

    <item
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/bottom_nav_label_list"
        android:icon="@drawable/check_list_512"
        />

    <item
        android:id="@+id/inventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/bottom_nav_label_inventory"
        android:icon="@drawable/fridge_512"
        />


    <item
        android:id="@+id/products"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/bottom_nav_label_products"
        android:icon="@drawable/salad_512"
        />

    <item
        android:id="@+id/stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/bottom_nav_label_stats"
        android:icon="@drawable/pie_chart_512"
        />

</menu>