<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/nutrients_edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/tv_padding"
        android:text="@string/nutrients_title"
        android:textAlignment="center"
        android:textSize="@dimen/h2_fontSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/nutrients_edit_kcal_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
		/>

    <TextView
        android:id="@+id/nutrients_edit_kcal_text"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_edit_et"
        android:padding="@dimen/tv_padding"
        android:text="@string/nutrients_kcal"
        android:textSize="@dimen/et_fontSize"
        app:layout_constraintBottom_toTopOf="@id/nutrients_edit_carbohydrates_text"
        app:layout_constraintEnd_toStartOf="@id/nutrients_edit_kcal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nutrients_edit_title"
        />
    <EditText
        android:id="@+id/nutrients_edit_kcal"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_edit_et"
        android:ems="10"
        android:hint="@string/nutrients_placeholder_kcal"
        android:inputType="number|numberDecimal|numberSigned"
        android:textSize="@dimen/et_fontSize"
        app:layout_constraintBottom_toTopOf="@id/nutrients_edit_carbohydrates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/nutrients_edit_kcal_text"
        app:layout_constraintTop_toBottomOf="@id/nutrients_edit_title"
		/>

    <TextView
        android:id="@+id/nutrients_edit_carbohydrates_text"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_edit_et"
        android:padding="@dimen/tv_padding"
        android:text="@string/nutrients_carbohydrates"
        android:textSize="@dimen/et_fontSize"
        app:layout_constraintBottom_toTopOf="@id/nutrients_edit_fats_text"
        app:layout_constraintEnd_toStartOf="@id/nutrients_edit_carbohydrates"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nutrients_edit_kcal_text"
        />
    <EditText
        android:id="@+id/nutrients_edit_carbohydrates"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_edit_et"
        android:ems="10"
        android:hint="@string/nutrients_placeholder_carbohydrates"
        android:inputType="number|numberDecimal|numberSigned"
        android:textSize="@dimen/et_fontSize" 
        app:layout_constraintBottom_toTopOf="@id/nutrients_edit_fats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/nutrients_edit_carbohydrates_text"
        app:layout_constraintTop_toBottomOf="@id/nutrients_edit_kcal"
		/>

    <TextView
        android:id="@+id/nutrients_edit_fats_text"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_edit_et"
        android:padding="@dimen/tv_padding"
        android:text="@string/nutrients_fats"
        android:textSize="@dimen/et_fontSize"
        app:layout_constraintBottom_toTopOf="@id/nutrients_edit_proteins_text"
        app:layout_constraintEnd_toStartOf="@id/nutrients_edit_fats"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nutrients_edit_carbohydrates_text"
		/>
    <EditText
        android:id="@+id/nutrients_edit_fats"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_edit_et"
        android:ems="10"
        android:hint="@string/nutrients_placeholder_fats"
        android:inputType="number|numberDecimal|numberSigned"
        android:textSize="@dimen/et_fontSize"
        app:layout_constraintBottom_toTopOf="@id/nutrients_edit_proteins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/nutrients_edit_fats_text"
        app:layout_constraintTop_toBottomOf="@id/nutrients_edit_carbohydrates"
		/>

    <TextView
        android:id="@+id/nutrients_edit_proteins_text"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_edit_et"
        android:padding="@dimen/tv_padding"
        android:text="@string/nutrients_proteins"
        android:textSize="@dimen/et_fontSize"
        app:layout_constraintEnd_toStartOf="@id/nutrients_edit_proteins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nutrients_edit_proteins_text"
		/>
    <EditText
        android:id="@+id/nutrients_edit_proteins"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_edit_et"
        android:ems="10"
        android:hint="@string/nutrients_placeholder_proteins"
        android:inputType="number|numberDecimal|numberSigned"
        android:textSize="@dimen/et_fontSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/nutrients_edit_proteins_text"
        app:layout_constraintTop_toBottomOf="@id/nutrients_edit_fats"		
		/>

</androidx.constraintlayout.widget.ConstraintLayout>