<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/settings_header_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/h2_margin"
        android:text="@string/settings_header_notifications"
        android:textSize="@dimen/h2_fontSize"
        app:layout_constraintBottom_toTopOf="@id/settings_tv_geofence"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/settings_tv_geofence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_geofence"
        android:textSize="@dimen/tv_fontSize"
        app:layout_constraintEnd_toStartOf="@id/settings_btn_geofence"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_header_notifications"
        />

    <Button
        android:id="@+id/settings_btn_geofence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_enable"
        android:textSize="@dimen/btn_fontSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/settings_tv_geofence"
        app:layout_constraintTop_toBottomOf="@+id/settings_header_notifications" />

</androidx.constraintlayout.widget.ConstraintLayout>
